RavenDB-15634 Double Scroll on Columns Selector Fix

--- a/src/Raven.Studio/wwwroot/Content/css/styles-common.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common.less
@@ -978,7 +978,7 @@ input[type=file] + .form-control {
 }
 
 .dropdown-menu {
-    max-height: 40vh;
+    max-height: 45vh;
     overflow: auto;
 
     .form-control {
